# waterpolovids

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  waterpolo_auto_reframe_pipeline.md
docs/: balltracking.md  reframing.md  webui.md  youtube_api_setup.md
scripts/: install_insta360_sdk.sh  label_ball.py  label_frames.py  process_kap7.py
src/wpv/: __init__.py  cli.py  config.py  db.py  pipeline.py  quality.py
src/wpv/camera/: __init__.py  interpolation.py  virtual_camera.py
src/wpv/ingest/: __init__.py  detect_format.py  manifest.py  stitch.py
src/wpv/publish/: __init__.py  youtube.py
src/wpv/render/: __init__.py  highlights.py  reframe.py
src/wpv/tracking/: __init__.py  detector.py  kalman.py  track_io.py  tracker.py  video_reader.py
src/wpv/upscale/: __init__.py  upscaler.py
src/wpv/web/: __init__.py  app.py  masks.py  tasks.py  uploads.py
src/wpv/web/static/: dashboard.js  mask-editor.js  style.css  upload.js
src/wpv/web/templates/: base.html  dashboard.html  game_new.html  game_review.html  game_upload.html  mask_editor.html
tests/: test_db.py  test_detector.py  test_highlights.py  test_ingest.py  test_kalman.py  test_pipeline.py  test_quality.py  test_reframe.py  test_smoke.py  test_tracker.py  test_youtube.py
